@@ -113,7 +113,8 @@ Conditional compilation in mipcomp.sh
 completesol heuristic nodesofs to 5000 (default 500)
 completesol heuristic solutions to -1 (default 5)
 Provide 9 prev solutions.
-
+--- 30 jan full ---
+Reduce efforts for completesol heuristic if obj only change.
 
 TODOs
 
